--- a/_posts/2017-07-21-一首Demo（待改）.mkd
+++ b/_posts/2017-07-21-一首Demo（待改）.mkd
@@ -20,7 +20,7 @@ _填词: 阿Z_
 
 酒足饭饱离席之时  
 
-我便同她一起回去
+我便同她一起回去  
 <br>
 <br>
 我看着身边这位女子
@@ -29,7 +29,7 @@ _填词: 阿Z_
 
 点解就这样一见钟情
 
-莫非因她素食主义
+莫非因她素食主义  
 <br>
 <br>
 回去给她发信息
@@ -38,16 +38,16 @@ _填词: 阿Z_
 
 平凡朋友平凡搭讪
 
-希望能得到回应
+希望能得到回应  
 <br>
 <br>
-她说要教我统计原理
+她说要教我运筹原理
 
 我说好啊我最爱学习
 
 可是书上那些数学模型
 
-都化成相依的微醺
+都化成相依的微醺  
 <br>
 <br>
 于是我决定约她出去
@@ -56,7 +56,7 @@ _填词: 阿Z_
 
 一百三十四公里
 
-再远我都不介意
+再远我都不介意  
 <br>
 <br>
 黑暗的剧场惨白的脸
@@ -65,7 +65,7 @@ _填词: 阿Z_
 
 出来以后不知往哪里去
 
-于是手牵手同行
+于是手牵手同行  
 <br>
 <br>
 如果世界上有童话
@@ -74,7 +74,7 @@ _填词: 阿Z_
 
 可惜我只爱欣赏戏剧
 
-戛然而止才是合理逻辑
+戛然而止才是合理逻辑  
 <br>
 <br>
 她也曾经有过故事
